# mac-colors.py

./: README.md  requirements.txt  setup.cfg  setup.py
mac_colors/: __init__.py  blue.py  green.py  grey.py  none.py  orange.py  purple.py  red.py  yellow.py
tests/mac-colors/examples/: blue.py  get.py  gray.py  green.py  none.py  purple.py  red.py  replace.py  yellow.py
