[metadata]
name = mac-colors
version = 2018.11.19
url = https://github.com/looking-for-a-job/mac-colors.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = color tag

[options]
install_requires = 
	public
	runcmd
	setuptools
	values
packages = 
	mac_colors
