# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-colors
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-colors.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = color tag

[options]
install_requires = 
	click
	public
	runcmd
	setuptools
	values
packages = 
	mac_colors
